# QtOpcUaManager

./: .gitattributes  .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  OpcUaManager.pro  README.md  THIRD_PARTY_NOTICES.md  additional_functions.prf  opencode.jsonc  qtquickcontrols2.conf
.github/workflows/: ci.yml
app/: appcore.cpp  appcore.h  appengine.cpp  appengine.h  main.cpp
cmake/: ConfigureQtOpcUaDebug.cmake  ConfigureWindowsRuntimeCopy.cmake  CopyWindowsRuntime.cmake  OpcUaManagerDocs.cmake
doc/: cppapi.qdoc  index.qdoc  opcuamanager.qdocconf  qmlmodules.qdoc
font/: LICENSE.txt  fontello-demo.html  fontello.eot
importedcontent/: README.md
pki/: README.md
qml/: .contextProperties.ini  CMakeLists.txt  Main.qml  MainScreen.ui.qml
qml/Base/: BsMenuBar.qml  BsOpcUaBrowser.qml  BsOpcUaConnectionForm.qml  CMakeLists.txt  qmldir
resources/: CMakeLists.txt  qtquickcontrols2.conf
resources/images/: LICENSE-Material-Symbols.txt  README.md
src/: CMakeLists.txt  main.cpp
src/core/: appcore.cpp  appcore.h  opcuamanager.cpp  opcuamanager.h  opcuanodedata.h  opcuaservice.cpp  opcuaservice.h
src/gui/: appengine.cpp
src/models/: opcuamodel.cpp  opcuamodel.h  treeitem.cpp  treeitem.h
src/qmlapi/: opcuamanager.cpp  opcuamanager.h
tests/: CMakeLists.txt
tests/integration/: tst_opcuaintegration.cpp
tests/qml/: README.md  tst_menubar.qml  tst_qml.cpp
tests/unit/: tst_opcuamodel.cpp
translations/: OpcUaManager_de_DE.ts  OpcUaManager_en_GB.ts  OpcUaManager_ru_RU.ts  OpcUaManager_uk_UA.ts
